tests/errors/bad_address.ki
var smtp = import("smtp")
discard smtp.MailBuilder().from_("a@x.com").to("not-an-address").subject("x").build()
